# mcp-calculator

./: .gitignore  calculator.py  main.py  package.json  pixi.toml  pnpm-lock.yaml  pyproject.toml  weather.py
